Login Screen UI Modifications
Added text and changed spacing and colors.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,7 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
+
+    <string name="login_message">"Please enter a valid email address and password to log in."
+    </string>
 </resources>
